impr: Refactor integration tests to use AbstractController